--- a/css/styles.css
+++ b/css/styles.css
@@ -172,31 +172,34 @@ body {
   pointer-events: none;
 }
 .backdrop.is-hidden .modal {
-  transform: translate(50%, 50%) scale(0.9);
-}
+  transform: translate(-50%, -50%) scale(0.9);
+  }
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 9;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-
   min-height: 500px;
   min-width: 521px;
   padding: 15px;
   background-color: var(--header-main-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .btn-close-modal {
   position: absolute;
@@ -207,12 +210,13 @@ border-radius: 4px;
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--header-main-color);
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
   cursor: pointer;
-} 
-.modal-close-icon {
-  margin: auto;
- 
- }
+  } 
+
 .hero-title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -340,23 +344,22 @@ img {
   position: relative;
 }
 .label {
+  display: flex;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 370px;
-height: 70px;
-background: rgba(47, 48, 58, 0.8);
-
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+  align-items: center;
+  justify-content: center;
 }
 .thumb-text {
-  margin-top: 27px;
-  margin-bottom: 27px;
   color: var(--header-main-color);
-font-weight: 700;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.17;
-text-align: center;
-text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 /* -----Our Team----- */
